# blahblahblahbot

./: .gitignore  README.txt  pyproject.toml  watchdog.sh
src/blahblahblahbot/: bot.py  config.py  database.py  sample_config.py
